NetBSD Problem Report #42793

From martin@aprisoft.de  Fri Feb 12 09:12:06 2010
Return-Path: <martin@aprisoft.de>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id EA5B463B896
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 12 Feb 2010 09:12:05 +0000 (UTC)
Message-Id: <20100212091157.644E7AF581B@emmas.aprisoft.de>
Date: Fri, 12 Feb 2010 10:11:57 +0100 (CET)
From: martin@aprisoft.de
Reply-To: martin@aprisoft.de
To: gnats-bugs@gnats.NetBSD.org
Subject: libterminfo failure in more(1)
X-Send-Pr-Version: 3.95

>Number:         42793
>Category:       lib
>Synopsis:       libterminfo failure in more(1)
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    lib-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Feb 12 09:15:00 +0000 2010
>Closed-Date:    Fri Feb 12 10:40:18 +0000 2010
>Last-Modified:  Fri Feb 12 10:50:02 +0000 2010
>Originator:     Martin Husemann
>Release:        NetBSD 5.99.24
>Organization:
The NetBSD Foundation, Inc.
>Environment:
System: NetBSD nelly.aprisoft.de 5.99.24 NetBSD 5.99.24 (NELLY.MP) #114: Tue Feb 9 11:19:15 CET 2010 martin@emmas.aprisoft.de:/nelly/usr/src/sys/arch/sparc64/compile/NELLY.MP sparc64
Architecture: sparc64
Machine: sparc64
>Description:

# TERM=vt100; export TERM
# more (some-file)
Floating exception (core dumped)

gdb says:

Core was generated by `more'.
Program terminated with signal 8, Arithmetic exception.
#0  0x00000000405023cc in _ti_flagindex () from /usr/lib/libterminfo.so.1
(gdb) bt
#0  0x00000000405023cc in _ti_flagindex () from /usr/lib/libterminfo.so.1
#1  0x0000000040502548 in _ti_flagindex () from /usr/lib/libterminfo.so.1
#2  0x0000000040502608 in tputs () from /usr/lib/libterminfo.so.1
#3  0x0000000000112bec in clear_bot ()
#4  0x000000000010a5f0 in forw ()
#5  0x00000000001062ec in commands ()
#6  0x000000000010eaec in main ()

works with TERM=xterm

>How-To-Repeat:
s/a

>Fix:
n/a

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Fri, 12 Feb 2010 10:40:18 +0000
State-Changed-Why:
fixed


From: Martin Husemann <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42793 CVS commit: src/lib/libterminfo
Date: Fri, 12 Feb 2010 10:36:07 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Fri Feb 12 10:36:07 UTC 2010

 Modified Files:
 	src/lib/libterminfo: tputs.c

 Log Message:
 Fix an array bounds check - fixes PR lib/42793.
 Restore a comment (from libterm/tputs.c), requested by jdc.


 To generate a diff of this commit:
 cvs rdiff -u -r1.1 -r1.2 src/lib/libterminfo/tputs.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.