Fix an array bounds check - fixes PR lib/42793. Restore a comment (from libterm/tputs.c), requested by jdc.